[package]
name = "seed-roller"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
mlua = { version = "0.11.6", features = ["lua55", "send", "serde", "anyhow", "vendored"] }
rand = "0.8.5"
serde = "1.0.228"
serde_json = "1.0.150"

maprando = { path = "C:/Users/Loptr/Desktop/Super Metroid/MapRandomizer Fork/MapRandomizer/rust/maprando" }
maprando-game = { path = "C:/Users/Loptr/Desktop/Super Metroid/MapRandomizer Fork/MapRandomizer/rust/maprando-game" }
